Refactoring to use Accept and Content-Type headers, and clean-up.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start-dev": "nodemon index -w src"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "type-is": "^1.6.15"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
