Enhancing health-check and fixing tests.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "extends": [
       "prettier"
     ],
+    "rules": {
+        "no-unused-vars": [2, {"args": "after-used", "argsIgnorePattern": "^_$"}]
+    },
     "ignores": [
       "index.js"
     ]
