--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
-    "express": "5",
+    "express": "v5.0.0-alpha.5",
     "express-handlebars": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "morgan": "^1.8.2",
     "pson": "^2.0.0",
-    "type-is": "^1.6.15"
+    "type-is": "^1.6.15",
+    "uuid": "^3.1.0",
+    "winston": "^2.3.1",
+    "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "ava": "^0.19.1",
