--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express-handlebars": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.8.2",
-    "pson": "^2.0.0",
+    "msgpack-lite": "^0.1.26",
     "type-is": "^1.6.15",
     "uuid": "^3.1.0",
     "winston": "^2.3.1",
