feat(providers): Adding custom-v1 provider and appropriate JSON schemas.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "v5.0.0-alpha.5",
     "express-handlebars": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonschema": "^1.2.4",
     "morgan": "^1.8.2",
     "msgpack-lite": "^0.1.26",
     "redis": "^2.7.1",
