Move away from deployments with a dotenv file

--- a/now.json
+++ b/now.json
@@ -1,7 +1,9 @@
 {
   "name": "random-image-api",
   "alias": "random.responsiveimages.io",
-  "dotenv": true,
+  "env": {
+    "REDIS_URL": "@random-images-redis-url"
+  },
   "type": "npm"
 }
 
