--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,23 +3,23 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:10
     steps:
       - checkout
       - restore_cache:
-          key: yarn-dependency-cache-{{ checksum "package.json" }}
+          key: npm-dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: |
-            yarn --pure-lockfile
+            npm install
       - save_cache:
-          key: yarn-dependency-cache-{{ checksum "package.json" }}
+          key: npm-dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
       - run:
           name: Run Tests
           command: |
-            yarn test
+            npm run test
 
 workflows:
   version: 2
