--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,21 +14,17 @@ jobs:
 
       - uses: actions/cache/restore@v3
         with:
-          key: npm-dependency-cache-${{hashfiles(package-lock.json)}}
+          key: npm-dependency-cache-${{hashfiles('./package-lock.json')}}
           path: ./node_modules
 
-      - run:
-          name: Install Dependencies
-          command: |
-            npm ci
+      - name: Install Dependencies
+        run: npm ci
 
       - uses: actions/cache/save@v3
+        if: always()
         with:
-          key: npm-dependency-cache-${{hashfiles(package-lock.json)}}
+          key: npm-dependency-cache-${{hashfiles('./package-lock.json')}}
           path: ./node_modules
-          if: always()
 
-      - run:
-          name: Run Tests
-          command: |
-            npm run test
+      - name: Run Tests
+        run: npm run test
